# device_monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/device_monitor/: __main__.py  app.py  config.py  crud.py  dependencies.py  routers.py  schemas.py  services.py  validators.py
src/device_monitor/database/: __init__.py  base.py  models.py  session.py
src/device_monitor/database/migrations/: env.py
src/device_monitor/database/migrations/versions/: 07581030b12f_add_devices_table.py  a1e355dcba05_initial_revision.py  cec7eaf39fda_add_batteries_table.py
src/device_monitor/routers/: __init__.py  battery_routes.py  device_routes.py
